Sign Up and Log In Implementation

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <br>
 
         <!-- Modal Sign Up Form -->
+    <div class="signup-container">
 
-        <div id="signup-modal" class="modal hide">
+        
+        <div id="signup-modal" class="signup-modal">
 
             <div class="modal-content">
                 <h2>Sign Up</h2>
@@ -46,12 +48,13 @@
                     <button type="submit" class="auth-btn">Sign Up</button>
                 </form>
 
-                <p class="auth-redirect">Already have an account? <a href="#" id="show-login">Log In</a></p>
+                <p class="auth-redirect">Already have an account? <a href="budgetapp.html" id="show-login">Log In</a></p>
             </div>
     </div>
+    </div>    
 
     <!-- .......................Login Modal ......................-->
-<div id="login-modal" class="modal hide">
+<div id="login-modal" class="login-modal">
     <div class="modal-content">
       <h2>Log In</h2>
       <form id="login-form">
