--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                     <button type="submit" class="auth-btn">Sign Up</button>
                 </form>
 
-                <p class="auth-redirect">Already have an account? <a href="budgetapp.html" id="show-login">Log In</a></p>
+                <p class="auth-redirect">Already have an account? <button id="show-login"  onclick="view()">Log In </button></p>
             </div>
     </div>
     </div>    
 
     <!-- .......................Login Modal ......................-->
-<div id="login-modal" class="login-modal">
+<div id="login-modal" style="display: none;" class="login-modal">
     <div class="modal-content">
       <h2>Log In</h2>
       <form id="login-form">
