--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <h1>Welcome to Your Budget Tracker</h1>
         <p>Manage Your Finances Effectively!</p>
         <br>
-        <br>
 
         <!-- Modal Sign Up Form -->
     <div class="signup-container">
@@ -71,22 +70,22 @@
     </div>
   </div>
 
-    <footer>
+  <footer>
 
-        <hr>
-         
-        <p><b>Contact me:</b> <a href="mailto:sambamichelle1@gmail.com.com">sambamichelle1@gmail.com</a>
-             | Phone: <a href="tel:(+254)714-563-442">(+254)714-563-442</a>        
-        </p>
+    <hr>
+     
+    <p><b>Contact me:</b> <a href="mailto:sambamichelle1@gmail.com.com">sambamichelle1@gmail.com</a>
+         | Phone: <a href="tel:(+254)714-563-442">(+254)714-563-442</a>        
+    </p>
 
-        <div class="social-media">
-            <a href="#"><i class='bx bxl-linkedin-square'></i>LinkedIn</a> |
-            <a href="#"><i class='bx bxl-github'></i>Github</a> |
-            <a href="#"><i class='bx bxl-instagram' ></i>Instagram</a> |
-            <a href="#"> <i class='bx bxl-twitter'> </i>Twitter</a>
-        </div>
+    <div class="social-media">
+        <a href="#"><i class='bx bxl-linkedin-square'></i>LinkedIn</a> |
+        <a href="#"><i class='bx bxl-github'></i>Github</a> |
+        <a href="#"><i class='bx bxl-instagram' ></i>Instagram</a> |
+        <a href="#"> <i class='bx bxl-twitter'> </i>Twitter</a>
+    </div>
 
-    </footer>
-    <script src="script.js"></script>
+</footer>
+    <script src="index.js"></script>
 </body>
 </html>
