Transaction Delete Confirmation

--- a/budgetapp.html
+++ b/budgetapp.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <button id="log-out"><a href="index.html">Log Out</a></button>
-    <div class="budget-card">
+    <p class="warning-message"></p>
+    <div class="budget-card budget-tracker">
         <h1>💰 Budget Tracker</h1>
     
     <!-- Summary Section -->
