Prevent Balance from Being Negative

--- a/budgetapp.html
+++ b/budgetapp.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <button id="log-out"><a href="index.html">Log Out</a></button>
-    <p class="warning-message"></p>
+    <p id="warning-message"></p>
     <div class="budget-card budget-tracker">
         <h1>💰 Budget Tracker</h1>
     
